Archive2/b4/2f04b9b06e36a0/output
main.cpp:5:1: error: static_assert failed "!"
static_assert(is_same< remove_cv_t<X>, int&>::value, "!");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
